LPS-134253 Add margin to fix layout issue

--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/META-INF/resources/css/_app.scss
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/META-INF/resources/css/_app.scss
@@ -4,6 +4,10 @@ $font-weight-semi-bold: 600;
 	margin-top: 0 !important;
 	padding-top: 0;
 
+	.alert {
+		margin-top: 1.5rem;
+	}
+
 	.alert-container {
 		height: auto;
 		margin-left: auto;
